# ComputingDS_HW4

./: README.md  hw4.py
homework_package/: LICENSE.txt  README.md  pyproject.toml  requirements.txt
homework_package/src/: model_function.py
homework_package/src/diabetes_prediction_package/: model_function.py
homework_package/tests/: notebook.ipynb
